--- a/SimpleUI/app/src/main/res/values/strings.xml
+++ b/SimpleUI/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SimpleUI</string>
+    <string name="title_activity_drink_menu">DrinkMenuActivity</string>
 </resources>
